--- a/NLP_Text Classification.ipynb
+++ b/NLP_Text Classification.ipynb
@@ -87,7 +87,10 @@
       "source": [
         "In the cell below, replace `SAPName` with your name as per SAP record, and `SRNo` with the last 5 digits of your IISc SR number. For example, IISc student with SAP name Twyla Linda (SR no - 04-03-00-10-22-20-1-15329) would use:\n",
         "\n",
-
+        "```python\n",
+        "STUDENT_SAP_NAME  = \"Twyla Linda\"\n",
+        "STUDENT_SR_NUMBER = \"15329\"\n",
+        "```"
       ]
     },
     {
@@ -115,30 +118,30 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "NIu94tsWanud",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "NIu94tsWanud",
         "outputId": "8ed9bd76-c9cc-4eeb-c306-1f2540408776"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
             "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -174,16 +177,16 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "M8EgYmP_anuf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "M8EgYmP_anuf",
         "outputId": "76cd6de1-f87c-4a73-985d-e93dfb32e6a6"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading train_data.csv...\n",
             "Successfully downloaded: downloaded_datasets/train_data.csv\n",
@@ -249,25 +252,21 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "-Zb86YZGanuh",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
+        "id": "-Zb86YZGanuh",
         "outputId": "9ca19a8a-5baf-4119-e970-5f8bd2f7fa04"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "                                              review  sentiment\n",
-              "0  I really liked this Summerslam due to the look...          1\n",
-              "1  Not many television shows appeal to quite as m...          1\n",
-              "2  The film quickly gets to a major chase scene w...          0\n",
-              "3  Jane Austen would definitely approve of this o...          1\n",
-              "4  Expectations were somewhat high for me when I ...          0"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 8000,\n  \"fields\": [\n    {\n      \"column\": \"review\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 7984,\n        \"samples\": [\n          \"On one level, Hari Om is a film using a familiar genre - the road movie - to tell a familiar story: curious Westerner explores the mysterious East. But at its heart, the film is about two people, a young French beauty (Isa) bent on experiencing life to the fullest and a motorized rickshaw driver (Hari Om) with Bollywood aspirations, from vastly different cultures, their slowly growing attraction for each other, and the beautiful mad chaos that is India today. The gap between them can never be bridged, but the director succeeds in bringing the two as close to the brink of an affair as possible without damaging the story's plausibility. India and its people are essential ingredients of the narrative, and except for the main characters, the roles are played beautifully and persuasively by locals recruited during the film's production while on the road between the Indian towns and villages that form the film's setting. One major negative for this viewer: a Keystone Kops chase near the film's conclusion as Hari flees mobsters bent on collecting a gambling debt. But the closing scenes where Isa and Hari bid farewell are poignant and unforgettable.\",\n          \"This was an atrocious waste of my time. No plot. The acting was so far below par, it should be used as an exemplar in acting classes of what NOT to do. It is merely a commercial rip-off of the earlier Universal Soldier, which also scrapes the bottom of the acting barrel. Its sad that VD needs to assert his ego every few years, and sadder still that people will pay good money to sit thru it. This kind of schlock gives Martial Arts movies a bad name. By comparison, it makes Segall, Norris, and Arnold look almost talented.<br /><br />Perhaps VD should take the Leslie Nielson track and do send-ups of his genre. At least then we could be laughing with him instead of at him.\",\n          \"This is one of the most laughably bad films I've ever seen. I cannot believe whoever wrote the review above was serious. Perhaps he was connected with making it. It doesn't have anything going for it. There is no suspense, the acting is dire, the direction hopeless. The music score (?) is three trite notes played ad nauseam. The plot (?) must have taken all of five minutes to write. The dialogue is what a 10-year-old would come up with if asked to do a homework project. The only (slightly) redeeming feature is the actor playing the psycho himself, who grimaces, trembles and gurns magnificently and thus is amusing at times. The only reason you would be on the edge of your seat would be if you were suffering from a weak bladder. Don't waste your time.\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"sentiment\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 0,\n        \"max\": 1,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          0,\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "df"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-8bbc6616-f87f-42e3-ad59-90b517590f0b\" class=\"colab-df-container\">\n",
@@ -532,14 +531,18 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "df",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 8000,\n  \"fields\": [\n    {\n      \"column\": \"review\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 7984,\n        \"samples\": [\n          \"On one level, Hari Om is a film using a familiar genre - the road movie - to tell a familiar story: curious Westerner explores the mysterious East. But at its heart, the film is about two people, a young French beauty (Isa) bent on experiencing life to the fullest and a motorized rickshaw driver (Hari Om) with Bollywood aspirations, from vastly different cultures, their slowly growing attraction for each other, and the beautiful mad chaos that is India today. The gap between them can never be bridged, but the director succeeds in bringing the two as close to the brink of an affair as possible without damaging the story's plausibility. India and its people are essential ingredients of the narrative, and except for the main characters, the roles are played beautifully and persuasively by locals recruited during the film's production while on the road between the Indian towns and villages that form the film's setting. One major negative for this viewer: a Keystone Kops chase near the film's conclusion as Hari flees mobsters bent on collecting a gambling debt. But the closing scenes where Isa and Hari bid farewell are poignant and unforgettable.\",\n          \"This was an atrocious waste of my time. No plot. The acting was so far below par, it should be used as an exemplar in acting classes of what NOT to do. It is merely a commercial rip-off of the earlier Universal Soldier, which also scrapes the bottom of the acting barrel. Its sad that VD needs to assert his ego every few years, and sadder still that people will pay good money to sit thru it. This kind of schlock gives Martial Arts movies a bad name. By comparison, it makes Segall, Norris, and Arnold look almost talented.<br /><br />Perhaps VD should take the Leslie Nielson track and do send-ups of his genre. At least then we could be laughing with him instead of at him.\",\n          \"This is one of the most laughably bad films I've ever seen. I cannot believe whoever wrote the review above was serious. Perhaps he was connected with making it. It doesn't have anything going for it. There is no suspense, the acting is dire, the direction hopeless. The music score (?) is three trite notes played ad nauseam. The plot (?) must have taken all of five minutes to write. The dialogue is what a 10-year-old would come up with if asked to do a homework project. The only (slightly) redeeming feature is the actor playing the psycho himself, who grimaces, trembles and gurns magnificently and thus is amusing at times. The only reason you would be on the edge of your seat would be if you were suffering from a weak bladder. Don't waste your time.\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"sentiment\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 0,\n        \"max\": 1,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          0,\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "                                              review  sentiment\n",
+              "0  I really liked this Summerslam due to the look...          1\n",
+              "1  Not many television shows appeal to quite as m...          1\n",
+              "2  The film quickly gets to a major chase scene w...          0\n",
+              "3  Jane Austen would definitely approve of this o...          1\n",
+              "4  Expectations were somewhat high for me when I ...          0"
+            ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -553,16 +556,16 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "P7jX7kchanuh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "P7jX7kchanuh",
         "outputId": "c9b25715-5732-4d78-acb1-2c6e6ebce584"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Sentiment Distribution:\n",
             "Class 0: 49.95%\n",
@@ -1109,16 +1112,16 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "id": "KjulkO45anur",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "KjulkO45anur",
         "outputId": "1c625cc0-4081-4bd9-ca58-29cce9539cb7"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Validation accuracy on this example dataset: 1.0000\n",
             "\n",
@@ -1186,16 +1189,16 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "HMFw5j5Ganuu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "HMFw5j5Ganuu",
         "outputId": "d509bdcb-fe25-4dc5-917e-bf301ede20f1"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Validation Accuracy: 0.8433\n",
             "\n",
@@ -1281,16 +1284,16 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
-        "id": "z_qbfgCwanuw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "z_qbfgCwanuw",
         "outputId": "83ce24cd-8d99-44cf-e82f-dd6d3d8fc3fe"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading word2vec-google-news-300...\n",
             "[==================================================] 100.0% 1662.8/1662.8MB downloaded\n",
@@ -1568,16 +1571,16 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "S5DPWzBJanu6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "S5DPWzBJanu6",
         "outputId": "95a0cb77-2fc2-4ff8-ec45-44bfee0dfd4e"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Testing famous analogy: king:man::queen:?\n",
             "\n",
@@ -1647,16 +1650,16 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "euItGWYjanu7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "euItGWYjanu7",
         "outputId": "8a92b092-fd34-4de5-b7dd-fa047446d423"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Testing: man:doctor::woman:?\n",
@@ -1744,16 +1747,16 @@
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "5VXGFSvHanu9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "5VXGFSvHanu9",
         "outputId": "40367179-7b26-41c7-f2eb-6eccf2ab3d6d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Finding similar words for: india\n",
@@ -2265,16 +2268,16 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "i-ZCHZV1anvH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "i-ZCHZV1anvH",
         "outputId": "ab8d309d-c6f4-44b1-9f12-19fd71153423"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Training Bag of Words classifier...\n",
             "BoW Validation Accuracy: 0.8635\n"
@@ -2298,22 +2301,22 @@
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
-        "id": "9g3MqkcManvH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "9g3MqkcManvH",
         "outputId": "b8645079-a74f-426a-ccd3-62c42ebbd5b6"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Training Word2Vec classifier...\n",
             "Downloading word2vec-google-news-300...\n",
             "Model downloaded successfully to: /root/gensim-data/word2vec-google-news-300/word2vec-google-news-300.gz\n",
-            "Word2Vec Validation Accuracy: 0.8934\n"
+            "Word2Vec Validation Accuracy: 0.8460\n"
           ]
         }
       ],
@@ -2332,6 +2335,14 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "6PHRmq-UanuC",
+        "gzRjdPLyanuW",
+        "AAR6vMplanuk"
+      ],
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "ds-207-v1",
       "language": "python",
@@ -2348,14 +2359,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.16"
-    },
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "6PHRmq-UanuC",
-        "gzRjdPLyanuW",
-        "AAR6vMplanuk"
-      ]
     }
   },
   "nbformat": 4,
