--- a/NLP_Text Classification.ipynb
+++ b/NLP_Text Classification.ipynb
@@ -88,8 +88,8 @@
         "In the cell below, replace `SAPName` with your name as per SAP record, and `SRNo` with the last 5 digits of your IISc SR number. For example, IISc student with SAP name Twyla Linda (SR no - 04-03-00-10-22-20-1-15329) would use:\n",
         "\n",
         "```python\n",
-        "STUDENT_SAP_NAME  = \"Twyla Linda\"\n",
-        "STUDENT_SR_NUMBER = \"15329\"\n",
+        "STUDENT_SAP_NAME  = \"\"\n",
+        "STUDENT_SR_NUMBER = \"\"\n",
         "```"
       ]
     },
